Fixes a style issue with the visualisation step of the widget creation
The chart selector would be cut off at the bottom due to an insufficient padding.

--- a/app/assets/stylesheets/layouts/management/l-widget-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-widget-creation.scss
@@ -32,6 +32,7 @@
 
   &.-visualization {
     padding-top: 50px;
+    padding-bottom: 220px; // Extra padding for the chart selector
 
     > .wrapper {
       display: flex;
